--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ h1 {
 
 /* Источник новости */
 .news-card .source {
-    color: #7f8c8d;
+    color: #64cfd6;
     font-size: 14px;
     font-weight: bold;
 }
